--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: "3.9"
       - name: install dependencies
-        run: python -m pip install pelican==4.7
+        run: python -m pip install pelican[markdown]==4.7
       - name: Build
         run: make publish
       - name: Deploy 🚀
