--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,19 +2,23 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+    rev: v4.2.0
     hooks:
+      - id: detect-private-key
+      - id: check-shebang-scripts-are-executable
+      - id: check-case-conflict
       - id: trailing-whitespace
-      #- id: end-of-file-fixer
-      - id: check-yaml
-      - id: check-json
-      - id: check-toml
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
       - id: debug-statements
+      - id: check-toml
+      - id: check-yaml
   - repo: https://github.com/psf/black
-    rev: 20.8b1
+    rev: 22.3.0
     hooks:
       - id: black
   - repo: https://github.com/timothycrosley/isort
-    rev: 5.6.4  # pick the isort version you'd like to use from https://github.com/timothycrosley/isort/releases
+    rev: 5.10.1
     hooks:
     - id: isort
+      name: isort (python)
